--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "remove": "sst remove"
   },
   "eslintConfig": {
-    "extends": ["serverless-stack"]
+    "extends": [
+      "serverless-stack"
+    ]
   },
   "dependencies": {
     "@serverless-stack/cli": "0.65.6",
     "@serverless-stack/resources": "0.65.6",
-    "aws-cdk-lib": "2.7.0"
+    "aws-cdk-lib": "2.7.0",
+    "aws-sdk": "^2.1080.0",
+    "uuid": "^7.0.3"
   }
 }
