--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@serverless-stack/resources": "0.65.6",
     "aws-cdk-lib": "2.7.0",
     "aws-sdk": "^2.1080.0",
+    "stripe": "^8.204.0",
     "uuid": "^7.0.3"
   }
 }
